// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-chartmogul destination: sendContact action - all fields 1`] = `
Object {
  "anonymous_id": "sCFIdyQr",
  "company": Object {
    "id": "sCFIdyQr",
    "name": "sCFIdyQr",
  },
  "email": "puh@bak.bn",
  "first_name": "sCFIdyQr",
  "last_name": "sCFIdyQr",
  "linked_in": "sCFIdyQr",
  "message_id": "sCFIdyQr",
  "name": "sCFIdyQr",
  "phone": "sCFIdyQr",
  "sent_at": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "title": "sCFIdyQr",
  "twitter": "sCFIdyQr",
  "type": "sCFIdyQr",
  "user_id": "sCFIdyQr",
}
`;

exports[`Testing snapshot for actions-chartmogul destination: sendContact action - required fields 1`] = `
Object {
  "anonymous_id": "sCFIdyQr",
  "message_id": "sCFIdyQr",
  "sent_at": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "type": "sCFIdyQr",
  "user_id": "sCFIdyQr",
}
`;

exports[`Testing snapshot for actions-chartmogul destination: sendCustomer action - all fields 1`] = `
Object {
  "address": Object {
    "city": "jbl@p6u",
    "country": "jbl@p6u",
    "postal_code": "jbl@p6u",
    "state": "jbl@p6u",
    "street": "jbl@p6u",
  },
  "created_at": "2021-02-01T00:00:00.000Z",
  "description": "jbl@p6u",
  "email": "el@di.as",
  "group_id": "jbl@p6u",
  "message_id": "jbl@p6u",
  "name": "jbl@p6u",
  "sent_at": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "type": "jbl@p6u",
  "user_id": "jbl@p6u",
  "website": "jbl@p6u",
}
`;

exports[`Testing snapshot for actions-chartmogul destination: sendCustomer action - required fields 1`] = `
Object {
  "group_id": "jbl@p6u",
  "message_id": "jbl@p6u",
  "sent_at": "2021-02-01T00:00:00.000Z",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "type": "jbl@p6u",
  "user_id": "jbl@p6u",
}
`;
